welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:2: error: ';' expected but ')' found.
  var test= -2)()
              ^